<resources>
    <string name="app_name">KakaoPage-UI-Clone-App</string>
    <string name="label_recommend">추천</string>
    <string name="label_webtoon">웹툰</string>
    <string name="label_web_novel">웹소설</string>
    <string name="label_book">책</string>
    <string name="description_menu">툴바에 있는 햄버거 메뉴 아이콘</string>
    <string name="description_search">툴바에 있는 검색 아이콘</string>
    <string name="label_home_screen">홈</string>
    <string name="label_notification_screen">알림</string>
    <string name="label_shortcut_screen">바로가기</string>
    <string name="label_gift_box_screen">선물함</string>
    <string name="label_storage_box_screen">보관함</string>
    <string name="description_top_banner_image">상단 배너 이미지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_rental_ticket"><b>대여권</b> %d장</string>
    <string name="label_permanent_ticket"><b>소장권</b> %d장</string>
    <string name="label_3_hours_wait_free_rental_ticket"><b>3시간 기다무 대여권</b> %d장</string>
    <string name="format_episode_page">%d쪽</string>
</resources>