<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/label_home_screen" />
    <item
        android:id="@+id/navigation_shortcut"
        android:icon="@drawable/ic_grid"
        android:title="@string/label_shortcut_screen" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_menu_bell"
        android:title="@string/label_notification_screen" />
    <item
        android:id="@+id/navigation_gift_box"
        android:icon="@drawable/ic_gift_box"
        android:title="@string/label_gift_box_screen" />
    <item
        android:id="@+id/navigation_storage_box"
        android:icon="@drawable/ic_storage_box"
        android:title="@string/label_storage_box_screen" />
</menu>