<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingTop="15dp"
    android:paddingEnd="10dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/tv_toolbar_title_recommend"
        style="@style/AppToolbar.Gray_900"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_recommend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_toolbar_title_webtoon"
        style="@style/AppToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/label_webtoon"
        app:layout_constraintStart_toEndOf="@id/tv_toolbar_title_recommend"
        app:layout_constraintTop_toTopOf="@id/tv_toolbar_title_recommend" />

    <TextView
        android:id="@+id/tv_toolbar_title_web_novel"
        style="@style/AppToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/label_web_novel"
        app:layout_constraintStart_toEndOf="@id/tv_toolbar_title_webtoon"
        app:layout_constraintTop_toTopOf="@id/tv_toolbar_title_webtoon" />

    <TextView
        android:id="@+id/tv_toolbar_title_book"
        style="@style/AppToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/label_book"
        app:layout_constraintStart_toEndOf="@id/tv_toolbar_title_web_novel"
        app:layout_constraintTop_toTopOf="@id/tv_toolbar_title_web_novel" />

    <ImageView
        android:id="@+id/iv_toolbar_menu"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/description_menu"
        android:src="@drawable/ic_hamburger_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_toolbar_search"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/description_search"
        android:src="@drawable/ic_search"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_toolbar_menu"
        app:layout_constraintEnd_toStartOf="@id/iv_toolbar_menu"
        app:layout_constraintTop_toTopOf="@id/iv_toolbar_menu" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/iv_toolbar_search"
        app:layout_constraintTop_toTopOf="@id/iv_toolbar_search"
        app:layout_constraintBottom_toBottomOf="@id/iv_toolbar_search"
        android:src="@drawable/ic_cash" />

</androidx.constraintlayout.widget.ConstraintLayout>